# fishy

./: Cargo.toml  README.md
src/: context.rs  lock_file.rs  main.rs  schema.rs
src/commands/: init.rs  mod.rs  publish.rs  update.rs
src/files/: lock.rs  mod.rs  schema.rs  secret.rs
