[package]
name = "fishy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"
p2panda-rs = { version = "0.7.0", features = ["test-utils"] }
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt"] }
toml = "0.7.3"
